Update server host

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     text: "",
                     messages: [],
                     ws: null,
-                    // host: "wss://hundred-production.up.railway.app"
-                    host: "ws://localhost:8181",
+                    host: "wss://hundred-production.up.railway.app",
+                    // host: "ws://localhost:8181",
                     stats: {
                         onlineCount: 0,
                     }
