Revisar docker compose e referencia do server no client

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     text: "",
                     messages: ["Trying to connect you..."],
                     ws: null,
-                    host: "wss://hundred-production.up.railway.app",
-                    // host: "ws://localhost:8181",
+                    host: "ws://localhost:8181",
                     stats: {
                         onlineCount: 0,
                     }
